name:          machines
category:      Control, Enumerator
version:       0.3
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett, Rúnar Bjarnason
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/machines/
bug-reports:   http://github.com/ekmett/machines/issues
copyright:     Copyright (C) 2012 Edward A. Kmett
synopsis:      Networked stream transducers
description:
  Networked stream transducers
  .
  Rúnar Bjarnason's talk on machines can be downloaded from:
  <https://dl.dropbox.com/u/4588997/Machines.pdf>
build-type:    Custom
tested-with:   GHC == 7.4.1
extra-source-files:
  .travis.yml
  .ghci
  .gitignore
  .vim.custom
  config
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/machines.git

library
  build-depends:
    async             >= 2.0.1,
    attoparsec        >= 0.10.4,
    base              == 4.*,
    bytestring        >= 0.10,
    comonad           >= 3,
    containers        >= 0.3 && < 0.6,
    lifted-async      >= 0.1,
    monad-control     >= 0.3.2,
    pointed           >= 3,
    profunctors       >= 3,
    semigroups        >= 0.8.3,
    transformers      == 0.3.*,
    transformers-base >= 0.4,
    mtl               >= 2 && < 2.2

  exposed-modules:
    Data.Machine
    Data.Machine.Attoparsec
    Data.Machine.ByteString
    Data.Machine.Chunk
    Data.Machine.Fanout
    Data.Machine.Is
    Data.Machine.Loop
    Data.Machine.Mealy
    Data.Machine.Moore
    Data.Machine.Plan
    Data.Machine.Process
    Data.Machine.Source
    Data.Machine.Tee
    Data.Machine.Type
    Data.Machine.Unread
    Data.Machine.Wye

    Data.Machine.Concurrent
    Data.Machine.Concurrent.AsyncStep
    Data.Machine.Concurrent.Buffer
    Data.Machine.Concurrent.Scatter
    Data.Machine.Concurrent.Tee
    Data.Machine.Concurrent.Wye

  default-language: Haskell2010
  other-extensions:
    FlexibleInstances
    GADTs
    MultiParamTypeClasses
    Rank2Types
    UndecidableInstances

  ghc-options: -Wall -fwarn-tabs -O2 -fdicts-cheap -funbox-strict-fields
  hs-source-dirs: src

-- Verify the results of the examples
test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base == 4.*,
    directory >= 1.0 && < 1.3,
    doctest >= 0.8 && <= 0.10,
    filepath >= 1.3 && < 1.4
  ghc-options: -Wall -Werror -threaded
  hs-source-dirs: tests
